# Android-DemoApp

./: README.md  settings.gradle.kts
ability/: build.gradle
ability/src/androidTest/java/com/ylx/ability/: ExampleInstrumentedTest.java
ability/src/main/cpp/: CMakeLists.txt  com_ylx_ability_jni_JNIUtils.h  jni_utils.cpp
ability/src/main/java/com/ylx/ability/: LogUtils.java
ability/src/main/java/com/ylx/ability/jni/: JNIUtils.java
ability/src/test/java/com/ylx/ability/: ExampleUnitTest.java
app/: build.gradle.kts
app/src/androidTest/java/com/ylx/demoapp/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/ylx/demoapp/: FirstActivity.kt  MainActivity.kt
app/src/main/java/com/ylx/demoapp/activity/: CustomizeViewActivity.java  FirstActivity.kt  MainActivity.kt  RecycleViewActivity.java
app/src/main/res/drawable/: nav_item_color.xml
app/src/main/res/layout/: act_customize_view.xml  act_first.xml  act_main.xml  act_recycle_view.xml  fragment_app.xml  item_nav.xml  item_nav_module.xml  item_nav_question.xml  item_nav_submodule.xml  item_nav_subsubmodule.xml  item_question.xml  item_recommendation.xml  pager_item.xml  recycler_item.xml  toolbar_title.xml
app/src/main/res/menu/: bottom_nav_menu.xml  toolbar_main_menu.xml  toolbar_menu.xml  toolbar_popup_menu.xml
app/src/main/res/raw/: app.json
app/src/main/res/values/: attrs.xml  colors.xml  dimens.xml  strings.xml  styles.xml  themes.xml
app/src/test/java/com/ylx/demoapp/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+13 files in other folders)
